--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -21,7 +21,13 @@ const fullDate =
 
 <div class="titleWrapper">
   <h1>{title}</h1>
-  <p><span>Published:</span> {fullDate}</p>
+  {
+    pubDate && (
+      <p>
+        <span>Published:</span> {fullDate}
+      </p>
+    )
+  }
 </div>
 <div class="stickyBorder"></div>
 <style>
