--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,6 @@ const { title } = Astro.props;
   footer {
     background: var(--grey-gradient);
     height: 40px;
-    /*margin-right: min(calc(var(--margin-width) * -1), -18px);*/
     margin-left: var(--margin-width);
     border-radius: var(--border-radius) 0 0 var(--border-radius);
     display: flex;
@@ -26,10 +25,11 @@ const { title } = Astro.props;
     font-weight: 700;
   }
   @media (max-width: calc(864rem / 16)) {
-    div {
+    footer {
       width: 100vw;
       border-radius: 0;
-      margin-right: 0;
+      margin-left: 0;
+      padding-right: 0;
     }
   }
 </style>
