--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@
     </a>
     <nav class="headerNav hidden">
       <ul>
-        <li><a href="/blog/1">Blog</a></li>
+        <li><a href="/blog">Blog</a></li>
         <li><a href="/projects">Projects</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/contact">Contact</a></li>
