--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -2,21 +2,17 @@
 const capitalise = (str) => {
   return str.charAt(0).toUpperCase() + str.slice(1);
 };
-const allBlogs = await Astro.glob("../pages/blog/*.mdx");
-const nonDraftBlogs = allBlogs.filter((blog) => !blog.frontmatter.draft);
-const uniqueSeries = [
-  ...new Set(nonDraftBlogs.map((blog) => blog.frontmatter.series).flat()),
-];
+const series = await Astro.glob("./series/*.mdx");
 ---
 
 <ul>
   {
-    uniqueSeries.map((series) => {
-      let seriesURL = `/blog/series/${series}/1`;
+    series.map((series) => {
+      let seriesURL = `/blog/series/${series.frontmatter.series}/1`;
       return (
         <li>
           <a class="series" href={seriesURL}>
-            {capitalise(series)}
+            {capitalise(series.frontmatter.series)}
           </a>
         </li>
       );
