--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -57,6 +57,7 @@ const fullDate =
     height: 8px;
     background-color: var(--red-gradient);
     transition: var(--transition-speed);
+    z-index: 0;
   }
   p {
     align-self: flex-end;
