--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const description = "A description for my home page";
       <div class="card-header-wrapper">
         <div class="flex-column">
           <h2>A Blog</h2>
-          <a href="/blog/1">Read blog</a>
+          <a href="/blog">Read blog</a>
         </div>
         <div class="icon-wrapper">
           <Icon name="quill" fill="white" />
