--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const description = "A description for my home page";
           <a href="/blog">Read blog</a>
         </div>
         <div class="icon-wrapper">
-          <Icon name="quill" fill="white" />
+          <Icon name="code" fill="white" />
         </div>
       </div>
       <div class="inner-card">
@@ -167,7 +167,7 @@ const description = "A description for my home page";
   [astro-icon] {
     height: 80px;
     width: 100%;
-    margin: 20px 20px 0 20px;
+    margin: 20px 18px 0 20px;
   }
   .text-padding {
     padding-left: 10px;
