Tweaked colours to be more accurate

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -68,22 +68,22 @@ const pageDescription = description ?? frontmatter.description;
 
       /*BASIC COLOUR VARIABLES*/
       :root {
-        --dark-grey: #52554a;
-        --light-grey: #a49694;
+        --dark-grey: #484648;
+        --light-grey: #9d9597;
         --dark-red: #8c1930;
         --light-red: #ff385c;
-        --dark-pink: #67204e;
-        --light-pink: #a6337d;
-        --dark-purple: #45244f;
-        --light-purple: #81488e;
-        --dark-blue: #2b4852;
-        --light-blue: #5795ae;
-        --dark-green: #333a25;
-        --light-green: #7c8d59;
-        --dark-yellow: #7f572f;
-        --light-yellow: #df9f5f;
-        --dark-orange: #7d3a21;
-        --light-orange: #d06b3f;
+        --dark-pink: #702054;
+        --light-pink: #c54097;
+        --dark-purple: #411d53;
+        --light-purple: #804aa6;
+        --dark-blue: #194653;
+        --light-blue: #2da1b8;
+        --dark-green: #27331d;
+        --light-green: #68925e;
+        --dark-yellow: #8a522b;
+        --light-yellow: #ff9b5e;
+        --dark-orange: #92361a;
+        --light-orange: #ff6c3e;
       }
       /*COLOUR GRADIENT VARIABLES*/
       :root {
@@ -138,13 +138,6 @@ const pageDescription = description ?? frontmatter.description;
         --border-radius: 15px;
         --margin-width: calc((100vw - var(--content-width)) / 2);
       }
-      /*body {
-        max-width: 100%;
-      }
-      html {
-        max-width: 100%;
-        overflow-x: hidden;
-      }*/
       /*need to decide on breakpoints and add responsive font-sizing*/
       h1,
       h2,
