Mostly fine-tuning home-page

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -17,7 +17,7 @@ series.forEach(s => {
 
 <Layout title="My Blog" description="My Blog">
   <h2>Read by Series</h2>
-  <p>Explanation of stuff</p>
+  <p>Weclome to my blog! On this site I've been writing posts in series. Each series is intended to be read in order as a series, but if you're here to see what's new, feel free to scroll down .</p>
   <Grid>
     {
       series.map((s) => {
