--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,15 +31,15 @@ const description = "A description for my home page";
           example:
           <ul>
             <li>
-              <a href="/blog/series/spiritual experiences/1">my spiritual experiences</a>
+              <a href="/blog/series/spiritual experiences/1">My spiritual experiences</a>
             </li><li>
               <a href="/blog/series/reading the bible/1"
-                >my experiences of reading the Bible</a
+                >My experiences of reading the Bible</a
               >
             </li>
           </ul>
-          The posts are organised into series, and I'd encourage you to read them in order
-          as a series, rather than starting with the latest&nbsp;one.
+          <p>The posts are organised into series, and each series is intended to be read in order
+          as a&nbsp;series.</p>
         </p>
       </div>
     </div>
@@ -63,8 +63,8 @@ const description = "A description for my home page";
       </div>
     </div>
   </Grid>
-  <h3 class="text-padding">Under Construction</h3>
-  <p class="text-padding">
+  <h3 class="text-padding" style="margin-top: 30px;">Under Construction</h3>
+  <p class="text-padding" style="margin-top: 6px;">
     This site is currently under construction, so please bear with the various
     unfinished&nbsp;bits.
   </p>
@@ -154,9 +154,18 @@ const description = "A description for my home page";
   div.inner-card {
     background: white;
     border-radius: var(--border-radius);
-    padding: 5px 20px 20px 20px;
+    padding: 20px 20px 10px 20px;
     height: 100%;
     margin-top: 1.2rem;
+  }
+  .inner-card p:first-of-type {
+    margin-top: 0px;
+  }
+  .inner-card p:last-of-type {
+    margin-bottom: 0px;
+  }
+  .inner-card ul, .inner-card li, .inner-card p, .inner-card a {
+    margin: 12px 0;
   }
   li {
     list-style: none;
