refactored series cards into SeriesCard Component, plus bits and pieces of finetuning.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -148,6 +148,8 @@ const pageDescription = description ?? frontmatter.description;
       h1 {
         font-size: calc(40rem / 16);
         line-height: calc(50rem / 16);
+        margin-top: 10px;
+        margin-bottom: 10px;
       }
       h2 {
         font-size: calc(28rem / 16);
