--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -40,7 +40,7 @@ const fullDate =
   div.titleWrapper {
     position: relative;
     background: var(--red-gradient);
-    height: 80px;
+    min-height: 80px;
     margin-left: min(calc(var(--margin-width) * -1), -18px);
     margin-right: -20px;
     display: flex;
