--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,10 +1,8 @@
 ---
 import Layout from "../../layouts/BaseLayout.astro";
-import Card from "../../components/Card.astro";
 import Grid from "../../components/Grid.astro";
-import Icon from "astro-icon";
 import NavCard from "../../components/NavCard.astro";
-import { capitalise } from "../../components/utils";
+import SeriesCard from "../../components/SeriesCard.astro";
 const series = await Astro.glob("../../components/series/*.mdx");
 const blogs = await Astro.glob("./*.mdx")
 const latestPost = blogs.reverse()[0]
@@ -17,28 +15,18 @@ series.forEach(s => {
 
 <Layout title="My Blog" description="My Blog">
   <h2>Read by Series</h2>
-  <p>Weclome to my blog! On this site I've been writing posts in series. Each series is intended to be read in order as a series, but if you're here to see what's new, feel free to scroll down .</p>
+  <p>Weclome to my blog! I've been writing posts in series for this site. Each series is intended to be read in order, as a series. That said, if you're just here to see what's new, feel free to scroll&nbsp;down!</p>
   <Grid>
     {
-      series.map((s) => {
-        let seriesColour = s.frontmatter.seriesColour;
-        let seriesColourVar = `var(--light-${seriesColour})`;
+      [...series].slice(0,4).map((s) => {
         return (
-          <Card cardColour={seriesColour} link={`/blog/series/${s.frontmatter.series}/1`}>
-            <Icon name={s.frontmatter.icon} fill={seriesColourVar}/>
-            <h3 style={`color: ${seriesColourVar}`}>
-              {capitalise(s.frontmatter.series)}
-            </h3>
-            <p>
-              <s.Content />
-            </p>
-          </Card>
+          <SeriesCard series={s}/>
         )
       })
     }
   </Grid>
   <div class="flex">
-  <a href="/blog/series/1">More Series: &gt;&gt;&gt;</a>
+  {series.length > 4 && <a href="/blog/series/1">More Series: &gt;&gt;&gt;</a>}
   </div>
   <h2>What's New?</h2>
   <NavCard post={latestPost} seriesColour={latestPostColour}/>
@@ -47,12 +35,6 @@ series.forEach(s => {
     </div>
 </Layout>
 <style>
-    [astro-icon] {
-        height: 80px;
-        width: auto;
-        float: right;
-        margin-left: 1rem;
-    }
     div.flex {
       display: flex;
       margin: 20px 0;
