--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -2,20 +2,16 @@
 import Layout from "./BaseLayout.astro";
 import NavCard from "../components/NavCard.astro";
 import Metadata from "../components/Metadata.astro";
+import SeriesCard from "../components/SeriesCard.astro";
 import { Icon } from "astro-icon";
 const { frontmatter } = Astro.props;
 const allBlogs = await Astro.glob("../pages/blog/*.mdx");
-let previousBlogObj: any = {};
-let nextBlogObj: any = {};
-allBlogs.forEach((blog, i) => {
-  if (frontmatter.title === blog.frontmatter.title) {
-    previousBlogObj = allBlogs[i - 1];
-    nextBlogObj = allBlogs[i + 1];
-  }
-});
-const series = frontmatter.series;
+const currentSeries = frontmatter.series;
+const allSeries = await Astro.glob("../components/series/*.mdx")
+allSeries.reverse()
+const seriesArray = allSeries.map(series => series.frontmatter.series);
 const filteredBlogs = allBlogs.filter((blog) => {
-  return blog.frontmatter.series.includes(series);
+  return blog.frontmatter.series.includes(currentSeries);
 });
 let nextInSeries: any = {};
 let previousInSeries: any = {};
@@ -25,12 +21,11 @@ filteredBlogs.forEach((blog, i) => {
     nextInSeries = filteredBlogs[i + 1];
   }
 });
-const seriesPages = await Astro.glob("../components/series/*.mdx");
-const seriesPage = seriesPages.filter((page) =>
-  page.frontmatter.series?.includes(series)
-);
-const { seriesColour } = seriesPage[0].frontmatter;
+const seriesIndex = seriesArray.indexOf(currentSeries)
+const { seriesColour } = allSeries[seriesIndex].frontmatter;
 const seriesColourVar = `var(--light-${seriesColour})`;
+let isNextSeries;
+if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {isNextSeries = true} else {isNextSeries = false};
 ---
 
 <Layout
@@ -50,31 +45,22 @@ const seriesColourVar = `var(--light-${seriesColour})`;
     <div>
     {
       previousInSeries && (
-        <>
           <NavCard post={previousInSeries} titlePrefix="Previous in Series: " {seriesColour}/>
-        </>
       )
     }
-    </div>
-    <div>
-    {nextInSeries && <NavCard post={nextInSeries} titlePrefix="Next in Series: " {seriesColour}/>}
-  </div>  
-  </ul>
-    <ul>
-      <div>
     {
-      previousBlogObj && previousBlogObj != previousInSeries && (
-        <NavCard post={previousBlogObj} titlePrefix="Previous Blog: " {seriesColour}/>
+      !previousInSeries && seriesIndex - 1 >= 0 && (
+      <SeriesCard series={allSeries[seriesIndex-1]} titlePrefix="Previous Series:"/>
       )
     }
     </div>
     <div>
-         {
-          nextBlogObj && nextBlogObj != nextInSeries && (
-            <NavCard post={nextBlogObj} titlePrefix="Next Blog: " {seriesColour}/>
-          )
-        }
-</div>
+    {
+    nextInSeries && (<NavCard post={nextInSeries} titlePrefix="Next in Series: " {seriesColour}/>)
+    }
+    { isNextSeries && (<SeriesCard series={allSeries[seriesIndex+1]} titlePrefix="Next Series:"/>)
+    }
+    </div>  
   </ul>
   <style define:vars={{ seriesColourVar }}>
     [astro-icon] {
