Made blog navigation responsive. Can't figure out how to get 'next post' to come first on mobile using grid...

--- a/src/components/Grid.astro
+++ b/src/components/Grid.astro
@@ -9,6 +9,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+    width: 100%;
   }
   @media (max-width: calc(639rem / 16)) {
     div {
