--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -3,6 +3,7 @@ import Layout from "./BaseLayout.astro";
 import NavCard from "../components/NavCard.astro";
 import Metadata from "../components/Metadata.astro";
 import SeriesCard from "../components/SeriesCard.astro";
+import Grid from "../components/Grid.astro";
 import { Icon } from "astro-icon";
 const { frontmatter } = Astro.props;
 const allBlogs = await Astro.glob("../pages/blog/*.mdx");
@@ -35,33 +36,33 @@ if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {isNextSeries = 
 >
   <Metadata frontmatter={frontmatter} {seriesColour} />
   <Icon
-    name={frontmatter.image ?? "/img/blog.svg"}
+    name={frontmatter.image ?? "blog"}
     fill={`var(--light-${seriesColour})`}
   />
   <div class="blog">
     <slot />
   </div>
-  <ul>
-    <div>
-    {
-      previousInSeries && (
-          <NavCard post={previousInSeries} titlePrefix="Previous in Series: " {seriesColour}/>
-      )
-    }
-    {
-      !previousInSeries && seriesIndex - 1 >= 0 && (
-      <SeriesCard series={allSeries[seriesIndex-1]} titlePrefix="Previous Series:"/>
-      )
-    }
+    <Grid>
+      <div>
+        {
+          previousInSeries && (
+              <NavCard post={previousInSeries} titlePrefix="Previous in Series: " {seriesColour}/>
+          )
+        }
+        {
+          !previousInSeries && seriesIndex - 1 >= 0 && (
+          <SeriesCard series={allSeries[seriesIndex-1]} titlePrefix="Previous Series:"/>
+          )
+        }
+        </div>
+      <div>
+        {
+          nextInSeries && (<NavCard post={nextInSeries} titlePrefix="Next in Series: " {seriesColour}/>)
+          }
+          { isNextSeries && (<SeriesCard series={allSeries[seriesIndex+1]} titlePrefix="Next Series:"/>)
+          }
     </div>
-    <div>
-    {
-    nextInSeries && (<NavCard post={nextInSeries} titlePrefix="Next in Series: " {seriesColour}/>)
-    }
-    { isNextSeries && (<SeriesCard series={allSeries[seriesIndex+1]} titlePrefix="Next Series:"/>)
-    }
-    </div>  
-  </ul>
+    </Grid>
   <style define:vars={{ seriesColourVar }}>
     [astro-icon] {
       width: 200px;
@@ -70,18 +71,8 @@ if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {isNextSeries = 
       float: right;
       padding: 10px 10px 5px 10px;
     }
-    ul {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 20px;
-      padding: 0;
-      flex-direction: column;
-    }
     div.blog {
       margin-top: 2rem;
-    }
-    ul div {
-      height: 100%;
     }
     :global(div.blog > p:first-child:first-letter) {
       color: var(--seriesColourVar);
