fix styling cascade issue, and minimal styling for blockquote

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -177,6 +177,11 @@ const pageDescription = description ?? frontmatter.description;
       a {
         color: var(--light-red);
       }
+      blockquote {
+      margin-left: 0;
+      padding-left: 40px;
+      border-left: solid 4px var(--seriesColourVar);
+      }
       @media (max-width: calc(639rem / 16)) {
         :root {
         --font-size-h1: calc(30rem / 16);
