--- a/src/components/NavCard.astro
+++ b/src/components/NavCard.astro
@@ -32,8 +32,8 @@ const seriesColourGradient=`var(--${seriesColour}-gradient-diagonal)`
         display: flex;
         flex-direction: column;
     }
-    li:hover,
-    li:focus {
+    div:hover,
+    div:focus {
         transform: scale(102%);
     }
     div {
