--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const description = "A description for my home page";
           <a href="/blog">Read blog</a>
         </div>
         <div class="icon-wrapper">
-          <Icon name="code" fill="white" />
+          <Icon name="quill" fill="white" />
         </div>
       </div>
       <div class="inner-card">
