--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -73,6 +73,7 @@ if (!nextInSeries && seriesIndex + 1 <= seriesArray.length - 1) {isNextSeries = 
     }
     div.blog {
       margin-top: 2rem;
+      margin-bottom: 2.5rem;
     }
     :global(div.blog > p:first-child:first-letter) {
       color: var(--seriesColourVar);
