--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,7 +25,9 @@
     footer {
       width: 100vw;
       border-radius: 0;
-      margin-left: 0;
+      margin: 45px 0 0 0;
+      height: 50px;
+      padding-bottom: 5px;
     }
   }
 </style>
