A new post (Psalms part 1) and fixed an issue with a vertical scroll bar causing a horizontal scroll bar (due to the use of 100vw).

--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -73,8 +73,10 @@ const fullDate =
     font-weight: 700;
   }
   @media (max-width: calc(864rem / 16)) {
-    div.titleWrapper, div.stickyBorder {
-      width: 100vw;
+    div.titleWrapper,
+    div.stickyBorder {
+      width: calc(100% + (max(var(--margin-width), 18px) * 2));
+      overflow: hidden;
       border-radius: 0;
       margin-right: 0;
     }
