--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,7 +23,7 @@
   }
   @media (max-width: calc(864rem / 16)) {
     footer {
-      width: 100vw;
+      width: 100%;
       border-radius: 0;
       margin: 45px 0 0 0;
       height: 50px;
