--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,15 +31,17 @@ const description = "A description for my home page";
           example:
           <ul>
             <li>
-              <a href="/blog/series/spiritual experiences/1">My spiritual experiences</a>
+              <a href="/blog/series/spiritual experiences/1">My Spiritual Experiences</a>
             </li><li>
               <a href="/blog/series/reading the bible/1"
-                >My experiences of reading the Bible</a
+                >My Experiences of Reading The Bible</a
               >
             </li>
           </ul>
-          <p>The posts are organised into series, and each series is intended to be read in order
-          as a&nbsp;series.</p>
+          <p>
+            The posts are organised into series, and each series is intended to be read in
+            order as a&nbsp;series.
+          </p>
         </p>
       </div>
     </div>
@@ -63,11 +65,6 @@ const description = "A description for my home page";
       </div>
     </div>
   </Grid>
-  <h3 class="text-padding" style="margin-top: 30px;">Under Construction</h3>
-  <p class="text-padding" style="margin-top: 6px;">
-    This site is currently under construction, so please bear with the various
-    unfinished&nbsp;bits.
-  </p>
 </Layout>
 
 <style>
@@ -164,7 +161,10 @@ const description = "A description for my home page";
   .inner-card p:last-of-type {
     margin-bottom: 0px;
   }
-  .inner-card ul, .inner-card li, .inner-card p, .inner-card a {
+  .inner-card ul,
+  .inner-card li,
+  .inner-card p,
+  .inner-card a {
     margin: 12px 0;
   }
   li {
